# viator

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  viator.conf  viator.service
.github/workflows/: benchmark.yml  ci.yml
benches/: protocol.rs  storage.rs
docs/: API.md  ARCHITECTURE.md  BUILDING.md  CLUSTER.md  COMPATIBILITY.md  CONFIG.md  DOCKER.md  PERSISTENCE.md  SECURITY.md  VECTORSET.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: commands.rs  fuzz_command_parser.rs  fuzz_frame.rs  fuzz_resp_parser.rs  resp_parser.rs
scripts/: benchmark_comparison.sh  conformance_test.sh  expert_edge_cases.sh  load_test.sh  pgo-build.sh  stress_test.sh
src/: error.rs  lib.rs  main.rs  pool.rs  telemetry.rs
src/commands/: bitmap.rs  blocking.rs  bloom_cmds.rs  cluster.rs  cms_cmds.rs  connection.rs  cuckoo_cmds.rs  dispatch.rs  executor.rs  geo.rs  hashes.rs  hyperloglog.rs  json_cmds.rs  keys.rs  lists.rs  mod.rs  pubsub.rs  registry.rs  scripting.rs  search_cmds.rs  sentinel.rs  server_cmds.rs  sets.rs  sorted_sets.rs  streams.rs  strings.rs  tdigest_cmds.rs  topk_cmds.rs  transactions.rs  ts_cmds.rs  vectorset_cmds.rs
src/persistence/: aof.rs  mod.rs  vdb.rs
src/protocol/: frame.rs  mod.rs  parser.rs  responses.rs
src/security/: acl.rs  audit.rs  command_protection.rs  connection_limits.rs  lua_sandbox.rs  mod.rs  password.rs  tls_config.rs
src/server/: cluster.rs  cluster_bus.rs  config.rs  connection.rs  io_uring.rs  latency.rs  metrics.rs  mod.rs  pubsub.rs  rate_limit.rs  replication.rs  sentinel.rs  state.rs  tracking.rs  watch.rs
src/storage/: db.rs  expiry.rs  mod.rs  sharded.rs
src/types/: bloom.rs  cms.rs  compact.rs  cuckoo.rs  graph.rs  key.rs  list.rs  mod.rs  search.rs  set.rs  sorted_set.rs  stream.rs  tdigest.rs  timeseries.rs  topk.rs  value.rs  vectorset.rs
tests/: binary_smoke_test.rs  differential_test.rs  load_test.rs  property_tests.rs  soak_test.rs
