[package]
name = "viator-fuzz"
version = "0.1.0"
authors = ["Panggi Libersa Jasri Akadol"]
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bytes = "1.9"
arbitrary = { version = "1.4", features = ["derive"] }

[dependencies.viator]
path = ".."

[[bin]]
name = "fuzz_resp_parser"
path = "fuzz_targets/resp_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_commands"
path = "fuzz_targets/commands.rs"
test = false
doc = false
bench = false

[profile.release]
debug = true
